feat: add disable dates

--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -1,5 +1,1 @@
-<pk-datepicker>
-  <ng-template pkCalendarCellRef let-cell>
-    {{ cell.displayValue }} is today:{{ cell.isToday }}
-  </ng-template>
-</pk-datepicker>
+<pk-datepicker> </pk-datepicker>
