--- a/projects/demo/src/styles.css
+++ b/projects/demo/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 /* Import ng-picker demo styles */
 @import '../../ng-picker/src/ng-picker.css';
+@import '../../ng-picker/src/themes/tailwind.css';
