--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -1,1 +1,3 @@
-<pk-datepicker> </pk-datepicker>
+<div style="margin-top: 50px">
+  <pk-datepicker style="width: 320px; margin: 0 auto"> </pk-datepicker>
+</div>
