--- a/projects/ng-picker/src/ng-picker.css
+++ b/projects/ng-picker/src/ng-picker.css
@@ -3,6 +3,10 @@
    by consumers in their global styles.
 */
 
+pk-datepicker {
+  display: block;
+}
+
 /* Button reset under pk-datepicker: remove UA defaults without adding a look */
 pk-datepicker button {
   appearance: none;
