--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -1,3 +1,4 @@
 <div style="margin-top: 50px">
-  <pk-datepicker mode="range" style="width: 250px; margin: 0 auto"> </pk-datepicker>
+  <pk-datepicker [(value)]="today" mode="single" style="width: 250px; margin: 0 auto">
+  </pk-datepicker>
 </div>
