--- a/projects/ng-picker/src/styles/datepicker.css
+++ b/projects/ng-picker/src/styles/datepicker.css
@@ -1,4 +1,4 @@
-.pk-datepicker {
+.pk-picker-datepicker {
   border: 1px solid var(--pk-picker-datepicker-border);
   border-radius: var(--pk-picker-datepicker-border-radius);
 }
