--- a/projects/ng-picker/src/styles/month-view.css
+++ b/projects/ng-picker/src/styles/month-view.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.pk-picker-weekday-cell {
+  color: var(--pk-picker-weekday-cell);
+}
+
 .pk-picker-day-cell {
   height: var(--pk-picker-date-size);
   width: var(--pk-picker-date-size);
