--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -1,4 +1,5 @@
 <div style="margin-top: 50px">
-  <pk-datepicker [(value)]="today" mode="single" style="width: 250px; margin: 0 auto">
+  <button [pkToggle]="picker">toggle</button>
+  <pk-datepicker [(value)]="today" #picker mode="single" style="width: 250px; margin: 0 auto">
   </pk-datepicker>
 </div>
